2013-09-14  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bm_header_widget_new):
	replace GtkInfoBar with a simple GtkBox and a GtkButtonBox,
	because GtkInfoBar prevents the GtkLabel from wrapping (bgo
	#707093)

2013-08-30  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bm_header_widget_new): make
	sure buttons are arranged vertically; would not be an issue,
	except that GtkLabels are not wrapped in a GtkInfoBar (bgo
	#707093).

2013-08-30  Peter Bloomfield

	* libbalsa/html.c (lbh_info_bar): make sure buttons are arranged
	vertically.

2013-08-30  Peter Bloomfield

	* libbalsa/html.c (lbh_info_bar): break message string into
	three separate lines, to work around GtkInfoBar breakage (bgo
	#707093).

2013-08-16  Peter Bloomfield

	Deprecation cleanup

	* src/main-window.h:
	* src/message-window.h:
	* src/sendmsg-window.h:
	* src/toolbar-factory.c:
	* src/toolbar-factory.h:

2013-08-16  Peter Bloomfield

	* src/sendmsg-window.c (sw_close_activated): mark window as
	being destroyed;
	(sw_get_action): check for window being destroyed, and return
	NULL if so;
	(sw_action_set_enabled), (sw_action_get_enabled),
	(sw_action_set_active), (sw_action_get_active): check for NULL
	action.

2013-08-15  Peter Bloomfield

	* src/main-window.c (bw_get_action): wrapper for
	g_action_map_lookup_action;
	(bw_action_set_boolean), (bw_action_get_boolean),
	(bw_action_set_string), (bw_action_set_enabled),
	(hide_change_state), (balsa_window_new),
	(balsa_window_update_book_menus): use it;
	(bw_set_filter_menu): use g_simple_action_set_state, to avoid
	recursion;
	(update_view_menu): remove redundant call to
	balsa_message_set_wrap.

2013-08-14  Peter Bloomfield

	* src/main-window.c (hide_change_state), (bw_set_filter_menu),
	(bw_filter_to_int): initialize the hide-messages menu items
	with g_simple_action_set_state instead of g_action_change_state,
	which does not seem to work for these items.

2013-08-13  Peter Bloomfield
