@@ -1,3 +1,10 @@
+2013-09-20  Peter Bloomfield
+
+	Disable GtkInfoBar workarounds
+
+	* libbalsa/html.c (lbh_info_bar): disable GtkInfoBar workaround.
+	* src/balsa-mime-widget-message.c (bm_header_widget_new): ditto.
+
 2013-09-14  Peter Bloomfield
 
 	* src/balsa-mime-widget-message.c (bm_header_widget_new):
